k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordtex
  labels:
    app.kubernetes.io/part-of: wordtex
